[package]
name = "lmdb-graph"
version = "0.1.0"
authors = ["Kevin Oberlies <favilo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
lmdb-zero = "0.4.4"
log = "0.4.11"
rand = "0.7.3"
rmp = "0.8.9"
rmp-serde = "0.14.4"
rmpv = "0.4.5"
serde = { version = "1.0.115", features = ["derive"] }
supercow = "0.1.0"
ulid = { version = "0.4.0", features = ["serde"] }
postcard = { version = "0.5.1", features = ["use-std"] }

[dependencies.heed]
version = "0.8.1"
features = ["mdbx"]
default-features = false

[dev-dependencies]
env_logger = "0.7.1"
tempdir = "0.3.7"
rstest = "0.6.4"
galvanic-assert = "0.8.7"
