[package]
name = "gremlite"
description = "Local graph database implementation, similar to sqlite, but for graph database"
version = "0.1.0"
authors = ["Kevin Oberlies <favilo@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/favilo/lmdb-graph"
keywords = ["lmdb", "graph", "database", "graphdb", "heed"]

categories = ["database-implementations", "database"]
publish = false

[[bench]]
name = "criterion_bench"
harness = false

[dependencies]
coz = "0.1.3"
itertools = "0.9.0"
log = "0.4.11"
parking_lot = "0.11.0"
postcard = { version = "0.5.1", features = ["use-std"] }
rand = "0.7.3"
serde = { version = "1.0.115", features = ["derive"] }
supercow = "0.1.0"
tempfile = "3.1.0"
thiserror = "1.0.20"
tracing = "0.1.21"
ulid = { version = "0.4.0", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }

[dependencies.heed]
version = "0.8.1"
features = ["mdbx"]
default-features = false

[dev-dependencies]
criterion = "0.3.3"
env_logger = "0.7.1"
galvanic-assert = "0.8.7"
parking = "2.0.0"
rstest = "0.6.4"
tempfile = "3.1.0"
tracing-timing = "0.4.3"
tracing-flame = "0.1.0"
tracing-subscriber = "0.2.12"
strum_macros = "0.19.4"
strum = "0.19.5"
